# gmac

./: .gitignore  Cargo.toml  README.md  preview.html  release.sh
.github/workflows/: publish_crate.yml  publish_pypackage.yml
gmac/: Cargo.toml
gmac/examples/: simple_block_deformation_ffd.rs
gmac/gmac_core/: Cargo.toml
gmac/gmac_core/src/: clusters.rs  mesh.rs  primitives.rs  selection.rs  transformation.rs
gmac/gmac_io/: Cargo.toml
gmac/gmac_io/src/: vtk.rs
gmac/gmac_morph/: Cargo.toml
gmac/gmac_morph/src/: design_block.rs  ffd.rs  rbf.rs
gmac/src/: lib.rs
gmac_py/: Cargo.toml  pyproject.toml
gmac_py/examples/: simple_block_deformation_ffd.py  simple_block_deformation_rbf.py  simple_ffd_deformation.py  simple_rbf_deformation.py
gmac_py/gmac/: __init__.py  __init__.pyi  core.py  core.pyi  morph.pyi
gmac_py/gmac/io/: __init__.py  __init__.pyi
gmac_py/gmac/morph/: __init__.py
gmac_py/src/: lib.rs  py_io.rs  py_mesh.rs  py_morph.rs  py_primitives.rs  py_selection.rs  py_transformation.rs
gmac_rs/: Cargo.toml
gmac_rs/examples/: dense_block_creation.rs  sandbox.rs  simple_block_deformation_ffd.rs  simple_block_deformation_rbf.rs  simple_ffd_deformation.rs  simple_rbf_deformation.rs
gmac_rs/src/: error.rs  lib.rs
gmac_rs/src/core/: clusters.rs  mesh.rs  primitives.rs  selection.rs  transformation.rs
gmac_rs/src/io/: base64.rs  gmsh.rs  mod.rs  obj.rs  stl.rs  utilities.rs  vtk.rs
gmac_rs/src/morph/: design_block.rs  ffd.rs  linear_algebra.rs  rbf.rs  transforms.rs
gmac_rs/tests/: io_tests.rs  morph_tests.rs
