[workspace]
resolver = "2"
members = [
    "gmac",
    "gmac/gmac_core",
    "gmac/gmac_io",
    "gmac/gmac_morph",
    "gmac_py"
]

[workspace.package]
version = "0.0.1"
authors = ["Aleksander Lovric <alexlovric@gmail.com>"]
edition = "2021"
description = "A fast geometry manipulation and creation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexlovric/gmac"
keywords = ["geometry", "morphing", "ffd", "rbf"]
categories = ["science", "graphics"]