[build-system]
requires = ["maturin>=0.14,<2.0.0"]
build-backend = "maturin"

[project]
name = "gmac"
version = "0.1.9"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
