[build-system]
requires = ["maturin>=0.14,<2.0.0"]
build-backend = "maturin"

[project]
name = "gmac"
version = "0.2.0"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Aleksander Lovric", email = "alexlovric@gmail.com" }
]
description = "A fast geometry manipulation and creation library written in Rust, wrapped in python"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "geometry",
    "3d",
    "mesh",
    "deformation",
    "morphing",
    "computational-geometry",
    "scientific-computing",
    "cad",
    "ffd",
    "rbf",
    "free-form-deformation",
    "radial-basis-function",
    "radial basis function",
]


[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]
