[package]
name = "gmac_rs"
version = "0.1.8"
authors = ["Aleksander Lovric <alexlovric@gmail.com>"]
description = "Blazingly fast geometry manipulation and creation library"
edition = "2021"
license = "MIT"
repository = "https://github.com/alexlovric/gmac"
documentation = "https://docs.rs/gmac_rs"
readme = "README.md"
keywords = ["geometry", "morphing", "ffd", "rbf"]
categories = ["science", "graphics"]

[lib]
name = "gmac"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
hologram = { version = "^0.1.4", default-features = false }

[features]
default = ["rayon"]

rayon = ["hologram/rayon"]
openblas = ["hologram/openblas"]
intel-mkl = ["hologram/intel-mkl"]

[dev-dependencies]
approx = "0.5"
