[package]
name = "gmac_morph"
description = "Geometry deformation toolkit."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[lib]
name = "gmac_morph"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
ndarray = { version = "0.15.6", default-features = false }
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }

gmac_core = { path = "../gmac_core" }

[dev-dependencies]
approx = "0.5"
